Create models and config files
